--- a/src/secp256k1/Makefile.am
+++ b/src/secp256k1/Makefile.am
@@ -1,5 +1,5 @@
 ACLOCAL_AMFLAGS = -I build-aux/m4
-
+CC_FOR_BUILD = gcc
 lib_LTLIBRARIES = libsecp256k1.la
 include_HEADERS = include/secp256k1.h
 noinst_HEADERS =
